--- a/Proyeto.GestionRepuestos.MVC/Views/Account/Register.cshtml
+++ b/Proyeto.GestionRepuestos.MVC/Views/Account/Register.cshtml
@@ -12,6 +12,19 @@
         <h4>Cree una cuenta nueva.</h4>
         <hr />
         @Html.ValidationSummary("", new { @class = "text-danger" })
+
+        <div class="row">
+            @Html.LabelFor(m => m.Nombre, new { @class = "col-md-2 col-form-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.Nombre, new { @class = "form-control" })
+            </div>
+        </div>
+        <div class="row">
+            @Html.LabelFor(m => m.Apellido, new { @class = "col-md-2 col-form-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.Apellido, new { @class = "form-control" })
+            </div>
+        </div>
         <div class="row">
             @Html.LabelFor(m => m.Email, new { @class = "col-md-2 col-form-label" })
             <div class="col-md-10">
